[Titlebar] Uses native streetlights and fixes layout bugs

--- a/src/components/Titlebar.css
+++ b/src/components/Titlebar.css
@@ -10,7 +10,7 @@
   height: 41px;
   justify-content: space-between;
   left: 1px;
-  padding: 0 14px;
+  padding: 0 14px 0 80px;
   position: fixed;
   top: 1px;
   width: calc(100vw - 2px);
@@ -19,20 +19,29 @@
 
 .loadButton {
   background: none;
-  border: 1px solid rgba(0, 0, 0, .13);
+  border: 1px solid rgba(0, 0, 0, 0.13);
   border-radius: 4px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, .08);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
   cursor: pointer;
+  letter-spacing: -0.1px;
+  line-height: 1.5;
+  margin-right: 10px;
+  min-width: 78px;
   outline: none;
+  overflow: hidden;
   pointer-events: auto;
   padding: 4px 8px;
+  text-overflow: ellipsis;
   transition: all 100ms ease-in-out;
+  white-space: nowrap;
 }
 
 .loadButton:hover {
-  border: 1px solid rgba(0, 0, 0, .2);
-  box-shadow: 0 1px 2px rgba(0, 0, 0, .18);
-  transform: scale(1.0125);
+  background: var(--color-black);
+  color: var(--color-white);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.18);
+  transform: scale(1.015);
 }
 
 .TrafficLights-btn:nth-child(2) {
